force-app/main/default/objects/OCE__AccountObjective__c/OCE__AccountObjective__c.object-meta.xml
<CustomObject>
    <description>Account Objectives for Account Plans.</description>
    <label>Account Objective</label>
    <nameField>
        <label>Account Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>