force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Business_Need_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Business_Need_Local_Language__c</fullName>
    <label>Business Need(Local Language)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>