force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Business_Unit__c</fullName>
    <formula>TEXT( OCE__AccountPlan__r.Lilly_Business_Unit__c )</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>