force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Contracted_ActivityCount__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contracted_ActivityCount__c</fullName>
    <label>Contracted ActivityCount</label>
    <summaryForeignKey>OCE__AccountTactic__c.OCE__AccountObjective__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>