force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Engagement_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Engagement_Plan_Name__c</fullName>
    <formula>OCE__AccountPlan__r.Name</formula>
    <label>Engagement Plan Name</label>
    <type>Text</type>
</CustomField>