force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Engagement_Plan_Name_LocalLanguage__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Engagement_Plan_Name_LocalLanguage__c</fullName>
    <formula>OCE__AccountPlan__r.Lilly_Engagement_Plan_Name_LocalLanguage__c</formula>
    <label>Engagement Plan Name (Local Language)</label>
    <type>Text</type>
</CustomField>