force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Plan_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Plan_Source__c</fullName>
    <formula>OCE__AccountPlan__r.Lilly_Plan_Source__c</formula>
    <label>Plan Source</label>
    <type>Text</type>
</CustomField>