force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Plan_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Plan_Therapeutic_Area__c</fullName>
    <formula>TEXT( OCE__AccountPlan__r.Lilly_Plan_Therapeutic_Area__c )</formula>
    <label>Plan Therapeutic Area</label>
    <type>Text</type>
</CustomField>