force-app/main/default/objects/OCE__AccountObjective__c/fields/Lilly_Year__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Year__c</fullName>
    <formula>OCE__AccountPlan__r.Lilly_Year__c</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>