force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__ActivityObjectiveDescription__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ActivityObjectiveDescription__c</fullName>
    <description>Short description of promotional activity details (MVP)</description>
    <inlineHelpText>Short description of promotional activity details</inlineHelpText>
    <label>Activity Objective Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>