force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__ActivityType__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ActivityType__c</fullName>
    <description>Type of the promotional activity (MVP)</description>
    <inlineHelpText>Type of the promotional activity</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Presence</fullName>
            </value>
            <value>
                <fullName>Facing</fullName>
            </value>
            <value>
                <fullName>Share of Shelf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>