force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__FormTemplate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__FormTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form Template for which the Response is recorded (MVP)</description>
    <inlineHelpText>Form Template for which the Response is recorded</inlineHelpText>
    <label>Form Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__FieldCoachingFormTemplate__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>StoreCheck</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__FieldCoachingFormTemplate__c</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>AccountObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>