force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OCE1__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the objective is active (MVP)</description>
    <inlineHelpText>Determines if the objective is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>