force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__Product__c.field-meta.xml
<CustomField>
    <fullName>OCE1__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product promoted with the activity (MVP)</description>
    <inlineHelpText>Product promoted with the activity</inlineHelpText>
    <label>Product</label>
    <referenceTo>OCE__Product__c</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>AccountObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>