force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__SalesDriver__c.field-meta.xml
<CustomField>
    <fullName>OCE1__SalesDriver__c</fullName>
    <description>Main sales driver of the promotional activity (MVP)</description>
    <inlineHelpText>Main sales driver of the promotional activity</inlineHelpText>
    <label>Sales Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>