force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__SalesTactic__c.field-meta.xml
<CustomField>
    <fullName>OCE1__SalesTactic__c</fullName>
    <description>Promotional activity tactic based on the selected sales driver (MVP)</description>
    <inlineHelpText>Promotional activity tactic based on the selected sales driver</inlineHelpText>
    <label>Sales Tactic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE1__SalesDriver__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Topics of interest of the Pharmacist</fullName>
            </value>
            <value>
                <fullName>Sales Rep / Trade Rep</fullName>
            </value>
            <value>
                <fullName>Medical Information advisor</fullName>
            </value>
            <value>
                <fullName>Remote learning</fullName>
            </value>
            <value>
                <fullName>Training events outside the POS</fullName>
            </value>
            <value>
                <fullName>Free unassisted on-line</fullName>
            </value>
            <value>
                <fullName>Assisted training</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>On Shelf / Continuous price cut</fullName>
            </value>
            <value>
                <fullName>Floor display / Occasional Price cut</fullName>
            </value>
            <value>
                <fullName>Magazine / Web / Fidelity Card Coupons</fullName>
            </value>
            <value>
                <fullName>On-line promo / through an app</fullName>
            </value>
            <value>
                <fullName>Pharmacy / Chain Leaflet</fullName>
            </value>
            <value>
                <fullName>Proactive advice with cross-selling</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Pharmacist recommendation</fullName>
            </value>
            <value>
                <fullName>In store promotion</fullName>
            </value>
            <value>
                <fullName>Throough consulting (e.g hair analysis)</fullName>
            </value>
            <value>
                <fullName>Sampling</fullName>
            </value>
            <value>
                <fullName>Combined products promo sale</fullName>
            </value>
            <value>
                <fullName>Blockbuster products</fullName>
            </value>
            <value>
                <fullName>Side pods or Pharmacy branded prods</fullName>
            </value>
            <value>
                <fullName>Special offer / Basket</fullName>
            </value>
            <value>
                <fullName>1 + 1 to consumer</fullName>
            </value>
            <value>
                <fullName>Fidelity Card</fullName>
            </value>
            <value>
                <fullName>Shelf Behind the counter</fullName>
            </value>
            <value>
                <fullName>Free Shelf Counter</fullName>
            </value>
            <value>
                <fullName>Showcase</fullName>
            </value>
            <value>
                <fullName>Paper Poster</fullName>
            </value>
            <value>
                <fullName>New Poster on the Web Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>