force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE1__StoreArea__c.field-meta.xml
<CustomField>
    <fullName>OCE1__StoreArea__c</fullName>
    <description>Promoted product location in a store (MVP)</description>
    <inlineHelpText>Promoted product location in a store</inlineHelpText>
    <label>Store Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category Shelf</fullName>
            </value>
            <value>
                <fullName>Primary Display</fullName>
            </value>
            <value>
                <fullName>Secondary Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>