force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountPlan__c</fullName>
    <description>Relation to Account Plan.</description>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>AccountObjectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>