force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__BusinessObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessObjective__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relation to Business Objective.</description>
    <label>Business Objective</label>
    <referenceTo>OCE__BusinessObjective__c</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>AccountObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>