force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__ContactNameRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ContactNameRef__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Denormalized Contact Name (MVP)</description>
    <label>Contact Name Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>