force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__Forecast__c.field-meta.xml
<CustomField>
    <fullName>OCE__Forecast__c</fullName>
    <description>Account Objective Forecast.</description>
    <label>Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>