force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__InheritGlobalFromAccPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__InheritGlobalFromAccPlan__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if IsGlobal value should be copied from parent Account Plan (MVP)</description>
    <label>Inherit Global From Account Plan</label>
    <type>Checkbox</type>
</CustomField>