force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__Interaction__c.field-meta.xml
<CustomField>
    <fullName>OCE__Interaction__c</fullName>
    <description>Account Objective Interaction.</description>
    <label>Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>