force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to parent Account. Is populated from Account Plan.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Objectives</relationshipLabel>
    <relationshipName>AccountObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>