force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__Target__c.field-meta.xml
<CustomField>
    <fullName>OCE__Target__c</fullName>
    <description>Account Objective Target.</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>