force-app/main/default/objects/OCE__AccountObjective__c/fields/OCE__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__TargetDate__c</fullName>
    <description>Target Date of Account Objective.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>