force-app/main/default/objects/OCE__AccountObjective__c/validationRules/TLEE_EP_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>TLEE_EP_Draft</fullName>
    <active>true</active>
    <description>Business Need cannot be changed when Engagement plan status is Draft</description>
    <errorConditionFormula>NOT(ISPICKVAL(OCE__AccountPlan__r.OCE__Status__c,&apos;Draft&apos;)) &amp;&amp; $Profile.Name = &apos;TLEE&apos;</errorConditionFormula>
    <errorMessage>Not able to save the changes as Engagement Plan status is not Draft</errorMessage>
</ValidationRule>